feat: :zap: work in progress

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -17,7 +17,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: lightslategray;
   color: #333;
 }
 
