--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,20 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.circle {
+    border-radius: 50%;
+    position: relative;
+    margin: 0 -10px;
+    width: calc(100% + 20px);
+    animation: rotating 20s linear infinite;
+}
+
+@keyframes rotating {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
+}
