--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,7 +11,7 @@ body {
 .circle {
     border-radius: 50%;
     position: relative;
-    margin: 0 -10px;
+    /* margin: 0 -10px; */
     width: calc(100% + 20px);
     animation: rotating 20s linear infinite;
     max-width: 100%;
