style: style profile creation form

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,6 +25,11 @@ body {
     text-decoration: none;
 }
 
+.MuiDropzoneArea-root {
+    max-width: 300px;
+    margin: 10px;
+}
+
 .flex {
     display: flex;
 }
